--- a/germax-frontend/src/templates/components/content-page-equipment-list/index.html
+++ b/germax-frontend/src/templates/components/content-page-equipment-list/index.html
@@ -14,8 +14,9 @@
 		<div id="equipment-list" class="col-md-9">
 		  <!-- Les unités du matériel apparaîtront ici -->
 		</div>
-		<div class="col-md-12 text-center">
+		<!-- <div class="col-md-12 text-center">
 		  <button id="load-more" class="btn btn-primary mt-3">Charger plus</button>
-		</div>
+		</div> -->
+		<!-- Лучше добавить пагинацию -->
 	  </div>
 	</div>
