--- a/germax-frontend/src/templates/components/content-page-registration/index.html
+++ b/germax-frontend/src/templates/components/content-page-registration/index.html
@@ -32,7 +32,7 @@
 							<select name="type">
 								<option value="admin">Admin</option>
 								<option value="rental-manager">Manager</option>
-								<option value="stockman">Учитель</option>
+								<option value="stockman">Gestionnaire de stocks</option>
 								<option value="teacher">Enseignant</option>
 								<option value="student">Etudiant</option>
 
