1) Удалил лишнюю таблицу Loans rental history, она повторяет данные Page-admin-reservation-management. Можно просто прятать данные имен для кладовщика. 2) Page-equipment-management -> Эта страница не только для админа Нет нужды удалять строки оборудования, его не будет так много -> удалил опцию "удалить" В функции "прятать" нет смысла, так как после фильтрации не останется много полей. 3) Переименовал сpage-rental-manager-add-client на page-client-management потому что основная суть не в добавлении клиента, а во взаимодействии с ним 4) Переименовал из page-rental-manager-loans-order-new-equipment.html в page-order-new-equipment.html 5) нет необходимости в page-stockman-equipment-orders/, поскольку она дублирует логику уже имеющейся page-order-new-equipment.html. Нужно будет сделать динамичную разметку в зависимости от аутентификации. 6) поменял логику разметки и действия для page-ahead-of-time-and-future-reservations/ (ex:stockman-future-reservations)

--- a/germax-frontend/src/templates/components/content-page-ahead-of-time-and-future-reservations/index.html
+++ b/germax-frontend/src/templates/components/content-page-ahead-of-time-and-future-reservations/index.html
@@ -65,16 +65,20 @@
 									</button>
 									<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
 										<li>
-											<a class="dropdown-item inform-state-action" href="#">Informer l'état du matériel </a>
-											<!-- для manager -->
+											<a class="dropdown-item verify-booking-action" href="#">Vérifier une réservation existante pour ce matériel</a>
+											<!-- будет искать сначала во вкладке 'future résérvation'. во вкладке arrivant à échéance -->
 										</li>
 										<li>
-											<a class="dropdown-item mark-as-send-action" href="#">Former l'ordre</a>
-											<!-- в таблицу equipment orders -->
+											<a class="dropdown-item verify-booking-action" href="#">Vérifier une réservation arrivant à échéance</a>
+											<!-- будет искать сначала во вкладке 'arrivant à échéance' -->
 										</li>
 										<li>
 											<a class="dropdown-item view-details" href="#" data-bs-toggle="modal"
 												data-bs-target="#detailsModal">Voir les détails</a>
+										</li>
+										<li>
+											<a class="dropdown-item inform-state-action" href="#">Informer sur le changement d'état du matériel </a>
+											<!-- для stockman. По умолачнию Bon état. Будет возможность  -->
 										</li>
 									</ul>
 								</div>
