--- a/germax-frontend/src/templates/components/content-page-equipment-management/index.html
+++ b/germax-frontend/src/templates/components/content-page-equipment-management/index.html
@@ -103,15 +103,12 @@
 												Choisir une action
 											</button>
 											<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-												<li><a class="dropdown-item edit-action" href="#">Éditer</a></li>
-												<li><a class="dropdown-item delete-action" href="#">Supprimer</a></li>
 												<li><a class="dropdown-item" href="#">Voir les détails</a></li>
-												<li><a class="dropdown-item" href="#">Réserver</a></li>
 												<li><a class="dropdown-item toggle-log-button" href="#" data-log-id="actionLog-1">Journal des
-														actions</a></li>
-												<li><a class="dropdown-item archive-action" href="#">Archiver</a></li>
-												<li class="dropdown-item d-none restore-action" data-equipment-id="1"><a href="#">Rétablir</a>
-												</li>
+													actions</a></li>
+												<li><a class="dropdown-item" href="#">Réserver</a></li>
+												<!-- только для Админа -->
+												<li><a class="dropdown-item edit-action" href="#">Modifier les données</a></li>
 											</ul>
 										</div>
 									</td>
@@ -148,20 +145,17 @@
 									</td>
 									<td>
 										<div class="dropdown">
-											<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2"
+											<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
 												data-bs-toggle="dropdown" aria-expanded="false">
 												Choisir une action
 											</button>
-											<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
-												<li><a class="dropdown-item edit-action" href="#">Éditer</a></li>
-												<li><a class="dropdown-item delete-action" href="#">Supprimer</a></li>
+											<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
 												<li><a class="dropdown-item" href="#">Voir les détails</a></li>
+												<li><a class="dropdown-item toggle-log-button" href="#" data-log-id="actionLog-1">Journal des
+													actions</a></li>
 												<li><a class="dropdown-item" href="#">Réserver</a></li>
-												<li><a class="dropdown-item toggle-log-button" href="#" data-log-id="actionLog-2">Journal des
-														actions</a></li>
-												<li><a class="dropdown-item archive-action" href="#">Archiver</a></li>
-												<li class="dropdown-item d-none restore-action" data-equipment-id="2"><a href="#">Rétablir</a>
-												</li>
+												<!-- только для Админа -->
+												<li><a class="dropdown-item edit-action" href="#">Modifier les données</a></li>
 											</ul>
 										</div>
 									</td>
@@ -198,20 +192,17 @@
 									</td>
 									<td>
 										<div class="dropdown">
-											<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton3"
+											<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
 												data-bs-toggle="dropdown" aria-expanded="false">
 												Choisir une action
 											</button>
-											<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton3">
-												<li><a class="dropdown-item edit-action" href="#">Éditer</a></li>
-												<li><a class="dropdown-item delete-action" href="#">Supprimer</a></li>
+											<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
 												<li><a class="dropdown-item" href="#">Voir les détails</a></li>
+												<li><a class="dropdown-item toggle-log-button" href="#" data-log-id="actionLog-1">Journal des
+													actions</a></li>
 												<li><a class="dropdown-item" href="#">Réserver</a></li>
-												<li><a class="dropdown-item toggle-log-button" href="#" data-log-id="actionLog-3">Journal des
-														actions</a></li>
-												<li><a class="dropdown-item archive-action" href="#">Archiver</a></li>
-												<li class="dropdown-item d-none restore-action" data-equipment-id="3"><a href="#">Rétablir</a>
-												</li>
+												<!-- только для Админа -->
+												<li><a class="dropdown-item edit-action" href="#">Modifier les données</a></li>
 											</ul>
 										</div>
 									</td>
