--- a/germax-frontend/src/templates/components/content-page-order-new-equipment/index.html
+++ b/germax-frontend/src/templates/components/content-page-order-new-equipment/index.html
@@ -64,6 +64,23 @@
 									<a class="dropdown-item view-details" href="#" data-bs-toggle="modal"
 										data-bs-target="#detailsModal">Voir les détails</a>
 								</li>
+								<!-- поля для stockman -->
+								<li>
+									<a class="dropdown-item mark-as-programm-action" href="#">Programmer l'envoi</a>
+									<!-- для статуса disponible -->
+								</li>
+								<li>
+									<a class="dropdown-item mark-as-programm-action" href="#">Annuler l'envoi</a>
+									<!-- для статуса programmé -->
+								</li>
+								<li>
+									<a class="dropdown-item mark-as-send-action" href="#">Marquer comme envoyé</a>
+									<!-- для статуса en attente -->
+								</li>
+								<li>
+									<a class="dropdown-item mark-as-delivered-action" href="#">Marquer comme délivré</a>
+									<!-- Подстраховочно, если сбои у менеджера, для статуса envoyé -->
+								</li>
 							</ul>
 						</div>
 					</td>
@@ -92,6 +109,23 @@
 									<a class="dropdown-item view-details" href="#" data-bs-toggle="modal"
 										data-bs-target="#detailsModal">Voir les détails</a>
 								</li>
+								<!-- поля для stockman -->
+								<li>
+									<a class="dropdown-item mark-as-programm-action" href="#">Programmer l'envoi</a>
+									<!-- для статуса disponible -->
+								</li>
+								<li>
+									<a class="dropdown-item mark-as-programm-action" href="#">Annuler l'envoi</a>
+									<!-- для статуса programmé -->
+								</li>
+								<li>
+									<a class="dropdown-item mark-as-send-action" href="#">Marquer comme envoyé</a>
+									<!-- для статуса en attente -->
+								</li>
+								<li>
+									<a class="dropdown-item mark-as-delivered-action" href="#">Marquer comme délivré</a>
+									<!-- Подстраховочно, если сбои у менеджера, для статуса envoyé -->
+								</li>
 							</ul>
 						</div>
 					</td>
@@ -119,6 +153,23 @@
 								<li>
 									<a class="dropdown-item view-details" href="#" data-bs-toggle="modal"
 										data-bs-target="#detailsModal">Voir les détails</a>
+								</li>
+								<!-- поля для stockman -->
+								<li>
+									<a class="dropdown-item mark-as-programm-action" href="#">Programmer l'envoi</a>
+									<!-- для статуса disponible -->
+								</li>
+								<li>
+									<a class="dropdown-item mark-as-programm-action" href="#">Annuler l'envoi</a>
+									<!-- для статуса programmé -->
+								</li>
+								<li>
+									<a class="dropdown-item mark-as-send-action" href="#">Marquer comme envoyé</a>
+									<!-- для статуса en attente -->
+								</li>
+								<li>
+									<a class="dropdown-item mark-as-delivered-action" href="#">Marquer comme délivré</a>
+									<!-- Подстраховочно, если сбои у менеджера, для статуса envoyé -->
 								</li>
 							</ul>
 						</div>
