--- a/germax-frontend/src/templates/components/content-page-reservation-history/index.html
+++ b/germax-frontend/src/templates/components/content-page-reservation-history/index.html
@@ -1,5 +1,5 @@
 <div class="container mt-4">
-	<h2>Gestion des Réservations</h2>
+	<h2>Historique des Réservations</h2>
 	<div class="mb-3">
 		<!-- Фильтры -->
 		<div class="row g-3">
@@ -106,15 +106,13 @@
 										Choisir une action
 									</button>
 									<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-										<li><a class="dropdown-item edit-reservation" href="#">Éditer</a></li>
-										<li>
-											<a class="dropdown-item delete-action" href="#">Supprimer</a>
-										</li>
 										<li>
 											<a class="dropdown-item view-details" href="#" data-bs-toggle="modal"
 												data-bs-target="#detailsModal">Voir les détails</a>
 										</li>
-										<li><a class="dropdown-item archive-action" href="#">Archiver</a></li>
+										<li><a class="dropdown-item edit-reservation" href="#">Modifier les données</a></li>
+										<!-- только для админа -->
+										<li><a class="dropdown-item archive-action" href="#">Cacher la ligne</a></li>
 										<li class="dropdown-item d-none restore-action" data-equipment-id="1"><a
 												href="#">Rétablir</a></li>
 									</ul>
@@ -136,15 +134,12 @@
 										Choisir une action
 									</button>
 									<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-										<li><a class="dropdown-item edit-reservation" href="#">Éditer</a></li>
-										<li>
-											<a class="dropdown-item delete-action" href="#">Supprimer</a>
-										</li>
 										<li>
 											<a class="dropdown-item view-details" href="#" data-bs-toggle="modal"
 												data-bs-target="#detailsModal">Voir les détails</a>
 										</li>
-										<li><a class="dropdown-item archive-action" href="#">Archiver</a></li>
+										<li><a class="dropdown-item edit-reservation" href="#">Modifier les données</a></li>
+										<li><a class="dropdown-item archive-action" href="#">Cacher la ligne</a></li>
 										<li class="dropdown-item d-none restore-action" data-equipment-id="1"><a
 												href="#">Rétablir</a></li>
 									</ul>
@@ -166,15 +161,12 @@
 										Choisir une action
 									</button>
 									<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-										<li><a class="dropdown-item edit-reservation" href="#">Éditer</a></li>
-										<li>
-											<a class="dropdown-item delete-action" href="#">Supprimer</a>
-										</li>
 										<li>
 											<a class="dropdown-item view-details" href="#" data-bs-toggle="modal"
 												data-bs-target="#detailsModal">Voir les détails</a>
 										</li>
-										<li><a class="dropdown-item archive-action" href="#">Archiver</a></li>
+										<li><a class="dropdown-item edit-reservation" href="#">Modifier les données</a></li>
+										<li><a class="dropdown-item archive-action" href="#">Cacher la ligne</a></li>
 										<li class="dropdown-item d-none restore-action" data-equipment-id="1"><a
 												href="#">Rétablir</a></li>
 									</ul>
@@ -197,15 +189,12 @@
 										Choisir une action
 									</button>
 									<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-										<li><a class="dropdown-item edit-reservation" href="#">Éditer</a></li>
-										<li>
-											<a class="dropdown-item delete-action" href="#">Supprimer</a>
-										</li>
 										<li>
 											<a class="dropdown-item view-details" href="#" data-bs-toggle="modal"
 												data-bs-target="#detailsModal">Voir les détails</a>
 										</li>
-										<li><a class="dropdown-item archive-action" href="#">Archiver</a></li>
+										<li><a class="dropdown-item edit-reservation" href="#">Modifier les données</a></li>
+										<li><a class="dropdown-item archive-action" href="#">Cacher la ligne</a></li>
 										<li class="dropdown-item d-none restore-action" data-equipment-id="1"><a
 												href="#">Rétablir</a></li>
 									</ul>
@@ -227,15 +216,12 @@
 										Choisir une action
 									</button>
 									<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-										<li><a class="dropdown-item edit-reservation" href="#">Éditer</a></li>
-										<li>
-											<a class="dropdown-item delete-action" href="#">Supprimer</a>
-										</li>
 										<li>
 											<a class="dropdown-item view-details" href="#" data-bs-toggle="modal"
 												data-bs-target="#detailsModal">Voir les détails</a>
 										</li>
-										<li><a class="dropdown-item archive-action" href="#">Archiver</a></li>
+										<li><a class="dropdown-item edit-reservation" href="#">Modifier les données</a></li>
+										<li><a class="dropdown-item archive-action" href="#">Cacher la ligne</a></li>
 										<li class="dropdown-item d-none restore-action" data-equipment-id="1"><a
 												href="#">Rétablir</a></li>
 									</ul>
@@ -257,15 +243,12 @@
 										Choisir une action
 									</button>
 									<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-										<li><a class="dropdown-item edit-reservation" href="#">Éditer</a></li>
-										<li>
-											<a class="dropdown-item delete-action" href="#">Supprimer</a>
-										</li>
 										<li>
 											<a class="dropdown-item view-details" href="#" data-bs-toggle="modal"
 												data-bs-target="#detailsModal">Voir les détails</a>
 										</li>
-										<li><a class="dropdown-item archive-action" href="#">Archiver</a></li>
+										<li><a class="dropdown-item edit-reservation" href="#">Modifier les données</a></li>
+										<li><a class="dropdown-item archive-action" href="#">Cacher la ligne</a></li>
 										<li class="dropdown-item d-none restore-action" data-equipment-id="1"><a
 												href="#">Rétablir</a></li>
 									</ul>
@@ -288,15 +271,12 @@
 										Choisir une action
 									</button>
 									<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-										<li><a class="dropdown-item edit-reservation" href="#">Éditer</a></li>
-										<li>
-											<a class="dropdown-item delete-action" href="#">Supprimer</a>
-										</li>
 										<li>
 											<a class="dropdown-item view-details" href="#" data-bs-toggle="modal"
 												data-bs-target="#detailsModal">Voir les détails</a>
 										</li>
-										<li><a class="dropdown-item archive-action" href="#">Archiver</a></li>
+										<li><a class="dropdown-item edit-reservation" href="#">Modifier les données</a></li>
+										<li><a class="dropdown-item archive-action" href="#">Cacher la ligne</a></li>
 										<li class="dropdown-item d-none restore-action" data-equipment-id="1"><a
 												href="#">Rétablir</a></li>
 									</ul>
@@ -318,15 +298,12 @@
 										Choisir une action
 									</button>
 									<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-										<li><a class="dropdown-item edit-reservation" href="#">Éditer</a></li>
-										<li>
-											<a class="dropdown-item delete-action" href="#">Supprimer</a>
-										</li>
 										<li>
 											<a class="dropdown-item view-details" href="#" data-bs-toggle="modal"
 												data-bs-target="#detailsModal">Voir les détails</a>
 										</li>
-										<li><a class="dropdown-item archive-action" href="#">Archiver</a></li>
+										<li><a class="dropdown-item edit-reservation" href="#">Modifier les données</a></li>
+										<li><a class="dropdown-item archive-action" href="#">Cacher la ligne</a></li>
 										<li class="dropdown-item d-none restore-action" data-equipment-id="1"><a
 												href="#">Rétablir</a></li>
 									</ul>
@@ -348,15 +325,12 @@
 										Choisir une action
 									</button>
 									<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-										<li><a class="dropdown-item edit-reservation" href="#">Éditer</a></li>
-										<li>
-											<a class="dropdown-item delete-action" href="#">Supprimer</a>
-										</li>
 										<li>
 											<a class="dropdown-item view-details" href="#" data-bs-toggle="modal"
 												data-bs-target="#detailsModal">Voir les détails</a>
 										</li>
-										<li><a class="dropdown-item archive-action" href="#">Archiver</a></li>
+										<li><a class="dropdown-item edit-reservation" href="#">Modifier les données</a></li>
+										<li><a class="dropdown-item archive-action" href="#">Cacher la ligne</a></li>
 										<li class="dropdown-item d-none restore-action" data-equipment-id="1"><a
 												href="#">Rétablir</a></li>
 									</ul>
@@ -379,15 +353,12 @@
 										Choisir une action
 									</button>
 									<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-										<li><a class="dropdown-item edit-reservation" href="#">Éditer</a></li>
-										<li>
-											<a class="dropdown-item delete-action" href="#">Supprimer</a>
-										</li>
 										<li>
 											<a class="dropdown-item view-details" href="#" data-bs-toggle="modal"
 												data-bs-target="#detailsModal">Voir les détails</a>
 										</li>
-										<li><a class="dropdown-item archive-action" href="#">Archiver</a></li>
+										<li><a class="dropdown-item edit-reservation" href="#">Modifier les données</a></li>
+										<li><a class="dropdown-item archive-action" href="#">Cacher la ligne</a></li>
 										<li class="dropdown-item d-none restore-action" data-equipment-id="1"><a
 												href="#">Rétablir</a></li>
 									</ul>
@@ -409,15 +380,12 @@
 										Choisir une action
 									</button>
 									<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-										<li><a class="dropdown-item edit-reservation" href="#">Éditer</a></li>
-										<li>
-											<a class="dropdown-item delete-action" href="#">Supprimer</a>
-										</li>
 										<li>
 											<a class="dropdown-item view-details" href="#" data-bs-toggle="modal"
 												data-bs-target="#detailsModal">Voir les détails</a>
 										</li>
-										<li><a class="dropdown-item archive-action" href="#">Archiver</a></li>
+										<li><a class="dropdown-item edit-reservation" href="#">Modifier les données</a></li>
+										<li><a class="dropdown-item archive-action" href="#">Cacher la ligne</a></li>
 										<li class="dropdown-item d-none restore-action" data-equipment-id="1"><a
 												href="#">Rétablir</a></li>
 									</ul>
@@ -439,15 +407,12 @@
 										Choisir une action
 									</button>
 									<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-										<li><a class="dropdown-item edit-reservation" href="#">Éditer</a></li>
-										<li>
-											<a class="dropdown-item delete-action" href="#">Supprimer</a>
-										</li>
 										<li>
 											<a class="dropdown-item view-details" href="#" data-bs-toggle="modal"
 												data-bs-target="#detailsModal">Voir les détails</a>
 										</li>
-										<li><a class="dropdown-item archive-action" href="#">Archiver</a></li>
+										<li><a class="dropdown-item edit-reservation" href="#">Modifier les données</a></li>
+										<li><a class="dropdown-item archive-action" href="#">Cacher la ligne</a></li>
 										<li class="dropdown-item d-none restore-action" data-equipment-id="1"><a
 												href="#">Rétablir</a></li>
 									</ul>
