--- a/germax-frontend/src/templates/mocks/ifhavetime/content-page-admin-user-management/index.html
+++ b/germax-frontend/src/templates/mocks/ifhavetime/content-page-admin-user-management/index.html
@@ -1,3 +1,5 @@
+<!-- НА ВТОРОЙ ПЛАН -->
+
 <div class="container mt-4">
 	<h2>Surveillance et Interventions Utilisateurs</h2>
 	<div class="row mb-3">
